--- a/signup.html
+++ b/signup.html
@@ -1,29 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> GEC ESPORTS </title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <title> GEC Esports </title>
+    <link rel="icon" href="/src/img/icon.png">
+    <link rel="stylesheet" href="/src/css/main.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
-    <link href="/css/main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
 </head>
-<body>
-    <nav id="navBar"> 
-        <a class="navItem" href="#"> About Us </a>
-        <a class="navItem" href="#"> Socials </a>
-        <a class="navItem active" href="#"> Signup </a>
-        <a class="navItem" href="#"> Team Roster </a>
-    </nav>
 
-    <div id="section"> 
-        <div class="section-header">  </div>
-        <div class="section-body"> Sign up <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="formLink"> here. </a></div>
+<body>
+
+    <div id="navBar">
+        <div class="navLeft">
+            <a href="/index.html">
+                <img src="/src/img/icon.png" class="logoImg" width="60px"></a>
+            <a href="#" class="navItem"> About </a>
+            <a href="/signup.html" class="navItem active"> Team Signup </a>
+            <a href="#" class="navItem"> Roster </a>
+            <a href="#" class="navItem"> Competitions </a>
+        </div>
+
+        <div class="navRight">
+            <span class="settingsIcon material-icons"> settings </span>
+        </div>
     </div>
 
+    <div id="mainContent">
+        <div class="content-title"> Signup Form </div>
+        <div class="content-text"> Our club requires that you...
+            <ul>
+                <li> A. Are a GEC Student</li>
+                <li> B. Have a ride home </li>
+                <li> C. Know a small amount on how to play games </li>
+                <li> D. Want to have fun and learn about the strategies of teamwork </li>
+            </ul>
+            If you meet all of these requirements, you are eligible to join our club! Sign up <a href="https://docs.google.com/forms/d/e/1FAIpQLSf7kpm2V9cGOtz44IrICRxsTES94gLZUD8BTQ4AgZ_UwJ9PcQ/viewform?usp=sf_link" class="mainLink"> here.</a>
+            <br>Remember that in the lab, we do have keyboards and mice, and you are welcome to bring your own. If you would like to play with a controller, I suggest you bring your own. We also suggest bringing a snack, because once you're there, you're
+            there for a few hours. Before we go to the lab to meet/game, we will meet in {}'s class at 3:05 before to brief on what's happening that day.
+        </div>
+    </div>
+
+    <div id="helpHolder">
+        <span class="infoIcon material-icons-outlined"> info </span>
+    </div>
+
+    <!-- <div id="bottomHolder">
+        <div class="copyright"> ©DecipherDev 2021-2022, All Rights Reserved </div>
+        <div class="copyright"> Photos from @UMF_Esports on Twitter </div>
+    </div> -->
+
 </body>
+
 </html>
