--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> GEC Esports </title>
+    <title> Home | GEC Esports </title>
     <link rel="icon" href="/src/img/icon.png">
     <link rel="stylesheet" href="/src/css/main.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -19,10 +19,10 @@
     <div id="navBar">
         <div class="navLeft">
             <img src="/src/img/icon.png" class="logoImg" width="60px">
-            <a href="#" class="navItem"> About </a>
+            <a href="/about-us.html" class="navItem"> About </a>
             <a href="/signup.html" class="navItem"> Team Signup </a>
             <a href="#" class="navItem"> Roster </a>
-            <a href="#" class="navItem"> Competitions </a>
+            <a href="/competitions.html" class="navItem"> Competitions </a>
         </div>
 
         <div class="navRight">
@@ -32,8 +32,7 @@
 
     <div id="labImgHolder">
         <div class="holderLeft">
-            <img src="/src/img/lab_1.png" id="labImg" class="lab-100 inactive" onclick="switchImg()">
-            <img src="/src/img/lab_2.png" id="labImg" class="lab-200 active" onclick="switchImg()">
+            <img src="/src/img/lab_1.png" id="labImg">
         </div>
 
         <div id="holderRight">
