--- a/signup.html
+++ b/signup.html
@@ -20,8 +20,8 @@
             <a href="/index.html">
                 <img src="/src/img/icon.png" class="logoImg" width="60px"></a>
             <a href="/about-us.html" class="navItem"> About </a>
-            <a href="/signup.html" class="navItem active"> Team Signup </a>
-            <a href="#" class="navItem"> Roster </a>
+            <a href="" class="navItem active"> Team Signup </a>
+            <a href="/roster.html" class="navItem"> Roster </a>
             <a href="/competitions.html" class="navItem"> Competitions </a>
         </div>
 
