--- a/competitions.html
+++ b/competitions.html
@@ -23,8 +23,8 @@
                 <img src="/src/img/icon.png" class="logoImg" width="60px"></a>
             <a href="/about-us.html" class="navItem"> About </a>
             <a href="/signup.html" class="navItem"> Team Signup </a>
-            <a href="#" class="navItem"> Roster </a>
-            <a href="/competitions.html" class="navItem active"> Competitions </a>
+            <a href="/roster.html" class="navItem"> Roster </a>
+            <a href="#" class="navItem active"> Competitions </a>
         </div>
 
         <div class="navRight">
