--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <img src="/src/img/icon.png" class="logoImg" width="60px">
             <a href="/about-us.html" class="navItem"> About </a>
             <a href="/signup.html" class="navItem"> Team Signup </a>
-            <a href="#" class="navItem"> Roster </a>
+            <a href="/roster.html" class="navItem"> Roster </a>
             <a href="/competitions.html" class="navItem"> Competitions </a>
         </div>
 
