--- a/roster.html
+++ b/roster.html
@@ -23,8 +23,8 @@
                 <img src="/src/img/icon.png" class="logoImg" width="60px"></a>
             <a href="/about-us.html" class="navItem"> About </a>
             <a href="/signup.html" class="navItem"> Team Signup </a>
-            <a href="#" class="navItem"> Roster </a>
-            <a href="/competitions.html" class="navItem active"> Competitions </a>
+            <a href="#" class="navItem active"> Roster </a>
+            <a href="/competitions.html" class="navItem"> Competitions </a>
         </div>
 
         <div class="navRight">
@@ -33,16 +33,11 @@
     </div>
 
     <div id="mainContent">
-        <div class="content-title"> Competitions</div>
+        <div class="content-title"> Team Roster 2022</div>
         <div class="content-text">
-            <div id="loader" class="active">
-                <div class="lds-ripple">
-                    <div></div>
-                    <div></div>
-                </div>
-                <div class="loaderText"> Cleaning up... </div>
-            </div>
+            In Progress. [Code 110]
         </div>
+
     </div>
 
     <div id="helpHolder">
