gec-esports.push()
P

--- a/about-us.html
+++ b/about-us.html
@@ -41,10 +41,16 @@
             <span class="infoIcon material-icons-outlined"> info </span>
         </div>
 
-        <!-- <div id="bottomHolder">
-        <div class="copyright"> ©DecipherDev 2021-2022, All Rights Reserved </div>
-        <div class="copyright"> Photos from @UMF_Esports on Twitter </div>
-    </div> -->
+        <div id="toolWindow">
+            <div class="toolWindowInner">
+                <div class="content-title"> Copyrights </div>
+                <div class="copyright"> ©DecipherDev 2021-2022, All Rights Reserved </div>
+                <div class="copyright"> Photos from @UMF_Esports on Twitter </div>
+                <div class="closeHolder">
+                    <div class="item material-icons" onclick="toggleWindow()"> close </div>
+                </div>
+            </div>
+        </div>
 
 </body>
 
