--- a/index.html
+++ b/index.html
@@ -53,17 +53,19 @@
         </div>
     </div>
 
-    <div id="helpHolder">
+    <div id="helpHolder" onclick="toggleWindow()">
         <span class="infoIcon material-icons-outlined"> info </span>
     </div>
 
-    <div id="windowCloser"> </div>
-
     <div id="toolWindow">
-        <div class="content-title"> Copyrights </div>
-        <div class="copyright"> ©DecipherDev 2021-2022, All Rights Reserved </div>
-        <div class="copyright"> Photos from @UMF_Esports on Twitter </div>
-        <div class="item material-icons"> close </div>
+        <div class="toolWindowInner">
+            <div class="content-title"> Copyrights </div>
+            <div class="copyright"> ©DecipherDev 2021-2022, All Rights Reserved </div>
+            <div class="copyright"> Photos from @UMF_Esports on Twitter </div>
+            <div class="closeHolder">
+                <div class="item material-icons" onclick="toggleWindow()"> close </div>
+            </div>
+        </div>
     </div>
 
 </body>
