Discord Embed Support
em bed

--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#ffb700">
+    <meta name="description" content="Official Website for the GEC Esports Team">
+    <meta content="GEC Esports - Signup" property="og:title">
+    <meta content="Official Website for the GEC Esports Team" property="og:description">
+    <meta content="https://gec-esports.github.io" property="og:url">
+    <meta content="https://gec-esports.github.io/img/icon.png" property="og:image">
     <title> Signup | GEC Esports </title>
     <link rel="icon" href="/src/img/icon.png">
     <link rel="stylesheet" href="/src/css/main.css">
