who tf is we?????

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta content="GEC Esports - Home" property="og:title">
     <meta content="Official Website for the GEC Esports Team" property="og:description">
     <meta content="https://gec-esports.github.io" property="og:url">
-    <meta content="https://gec-esports.github.io/img/icon.png" property="og:image">
+    <meta content="https://gec-esports.github.io/src/img/icon.png" property="og:image">
     <title> Home | GEC Esports </title>
     <link rel="icon" href="/src/img/icon.png">
     <link rel="stylesheet" href="/src/css/main.css">
