--- a/index.html
+++ b/index.html
@@ -1,79 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#ffb700">
-    <meta name="description" content="Official Website for the GEC Esports Team">
-    <meta content="GEC Esports - Home" property="og:title">
-    <meta content="Official Website for the GEC Esports Team" property="og:description">
-    <meta content="https://gec-esports.github.io" property="og:url">
-    <meta content="https://gec-esports.github.io/src/img/icon.png" property="og:image">
-    <title> Home | GEC Esports </title>
-    <link rel="icon" href="/src/img/icon.png">
-    <link rel="stylesheet" href="/src/css/main.css">
+    <title> Under Construction </title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-    <script src="/src/script/index.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;1,200;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
+    <link rel="icon" href="/dev/src/img/icon.png">
 </head>
-
 <body>
-
-    <div id="navBar">
-        <div class="navLeft">
-            <img src="/src/img/icon.png" class="logoImg" width="60px">
-            <a href="/about-us.html" class="navItem"> About </a>
-            <a href="/signup.html" class="navItem"> Team Signup </a>
-            <a href="/roster.html" class="navItem"> Roster </a>
-            <a href="/competitions.html" class="navItem"> Competitions </a>
-        </div>
-
-        <div class="navRight">
-            <span class="settingsIcon material-icons"> settings </span>
+    <div id="backgroundImage">
+        <img src="/dev/src/img/lab_1.png" id="bgImg">
+    </div>
+    <div id="constructionHolder">
+       <img src="/dev/src/img/icon.png" id="constImg">
+        <div class="constText">
+            <div class="constTitle"> Under Construction. </div>
+            <div class="constSub"> We're working on big things. </div>
         </div>
     </div>
-
-    <div id="labImgHolder">
-        <div class="holderLeft">
-            <img src="/src/img/lab_1.png" id="labImg">
-        </div>
-
-        <div id="holderRight">
-            <div class="content-title"> State of the Art Esports Lab </div>
-            <div class="content-text"> GEC has made a very lucrative deal with the University of Michigan's ITS Staff, so now we are able to use the Esports Lab over at Riverfront on the second floor. All Club Meetings/Activities will be held there. </div>
-            <div class="content-directions">
-                <a class="directions" href="https://www.google.com/maps/place/Riverfront+Center+Residence+Hall/@43.0173762,-83.6931809,18.84z/data=!3m1!5s0x88238215f6991841:0x58b7ae922bbf966a!4m5!3m4!1s0x8823821689035e5b:0x2bea95465ca0402c!8m2!3d43.017759!4d-83.6928582">
-                    <span class="material-icons"> location_on </span> Riverfront -- Google Maps
-                </a>
-            </div>
-        </div>
-    </div>
-
-    <div id="signupHolder">
-        <div class="content-title"> Interested? Join Us! </div>
-        <div class="content-text"> We're open to all who want to join as long as you meet the requirements :) <br> Join us
-            <a href="/signup.html" class="mainLink"> here</a>.
-        </div>
-    </div>
-
-    <div id="helpHolder" onclick="toggleWindow()">
-        <span class="infoIcon material-icons-outlined"> info </span>
-    </div>
-
-    <div id="toolWindow">
-        <div class="toolWindowInner">
-            <div class="content-title"> Copyrights </div>
-            <div class="copyright"> ©DecipherDev 2021-2022, All Rights Reserved </div>
-            <div class="copyright"> Photos from @UMF_Esports on Twitter </div>
-            <div class="closeHolder">
-                <div class="item material-icons" onclick="toggleWindow()"> close </div>
-            </div>
-        </div>
-    </div>
-
 </body>
-
 </html>
+
+<style defer>
+    body {
+         background: #101010
+    }
+
+    * {
+    font-family: 'IBM Plex Sans', sans-serif;
+    user-select: none;
+    color: #fff;
+}
+
+#backgroundImage {
+    position: fixed;
+    z-index: -1;
+    top: 0;
+    left: 0;
+}
+
+#bgImg {
+    width: 100vw;
+    height: 100vh;
+    filter: brightness(0.5) blur(7px);
+    transform: scale(1.2);
+}
+
+#constructionHolder {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+img#constImg {
+    width: 100px;
+    height: 100px;
+}
+
+.constText {
+    text-align: center;
+}
+
+.constTitle {
+    font-size: 32px;
+}
+</style>
